	PR middle-end/24003 	* calls.c (expand_call): If TARGET is a MEM and some part of the 	argument area has been saved, force TARGET to a register.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106860 138bc75d-0d04-0410-961f-82ee72b054a4